--- a/resources/css/about.css
+++ b/resources/css/about.css
@@ -1,6 +1,72 @@
+html{
+    margin-top: 70px;
+    position: relative;
+}
+
 body{
     background-image: url('../images/kevin-bhagat-zNRITe8NPqY-unsplash.jpg');
     background-repeat: no-repeat;
+}
+
+header{
+    position: fixed;
+    z-index: 100;
+    width: 100%;
+    border-bottom: solid 1px #c6c1c1;
+    background-color: white;
+    top: 0;
+    height: 70px;
+}
+
+
+header nav ul li{
+    list-style: none;
+}
+
+header nav ul li a {
+    text-decoration: none;
+}
+
+header nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+header nav .left ul{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly !important;
+    margin: 20px;
+}
+
+header nav .left ul li{
+    margin-right: 40px;
+    
+}
+
+header nav .right ul{
+    display: flex;
+    margin: 20px;
+}
+
+header nav .right ul li{
+    margin-left: 40px;
+    
+}
+
+a{
+    color: rgb(180, 180, 218);
+    font-size: 20px;
+    font-weight: bold;
+}
+
+a:hover{
+    color: rgb(70, 137, 238);
+}
+
+header nav .right ul li:last-child{
+    padding-right: 50px;
 }
 
 .txt{
