--- a/resources/css/contact.css
+++ b/resources/css/contact.css
@@ -1,12 +1,81 @@
 html{
     height: 100%;
+    
+    position: relative;
+    
 }
+
+header{
+    position: fixed;
+    z-index: 100;
+    width: 100%;
+    border-bottom: solid 1px #c6c1c1;
+    background-color: white;
+    top: 0;
+    height: 70px;
+    margin-left: -8px;
+}
+
+
+header nav ul li{
+    list-style: none;
+}
+
+header nav ul li a {
+    text-decoration: none;
+}
+
+header nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+header nav .left ul{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly !important;
+    margin: 20px;
+}
+
+header nav .left ul li{
+    margin-right: 40px;
+    
+}
+
+header nav .right ul{
+    display: flex;
+    margin: 20px;
+}
+
+header nav .right ul li{
+    margin-left: 40px;
+    
+}
+
+a{
+    color: rgb(180, 180, 218);
+    font-size: 20px;
+    font-weight: bold;
+}
+
+a:hover{
+    color: rgb(70, 137, 238);
+}
+
+header nav .right ul li:last-child{
+    padding-right: 50px;
+}
+
 
 body{
     background: linear-gradient(to bottom right, rgb(253, 153, 153), rgb(255, 242, 129));
     background-size: cover;
     background-repeat: no-repeat;
     text-align: center;
+    margin-top: 70px;
+    
+    
     
 }
 
@@ -37,4 +106,12 @@ p a{
 p a:hover{
     color: #6E0026;
     text-decoration: underline;
+}
+
+.cntm{
+    display: none;
+}
+
+.mob{
+    display: none;
 }
