--- a/resources/css/sign-in.css
+++ b/resources/css/sign-in.css
@@ -12,6 +12,90 @@ html,body{
   place-items: center;
   background: -webkit-linear-gradient(left, #7845b2, #42cffa);
 }
+
+header{
+  position: fixed;
+  z-index: 100;
+  width: 100%;
+  border-bottom: solid 1px #c6c1c1;
+  background-color: white;
+  top: 0;
+  height: 70px;
+}
+
+
+header nav ul li{
+  list-style: none;
+}
+
+header nav ul li a {
+  text-decoration: none;
+}
+
+header nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+header nav .left ul{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly !important;
+  margin: 20px;
+}
+
+header nav .left ul li{
+  margin-right: 40px;
+  
+}
+
+header nav .right ul{
+  display: flex;
+  margin: 20px;
+}
+
+header nav .right ul li{
+  margin-left: 40px;
+  
+}
+
+a{
+  color: rgb(180, 180, 218);
+  font-size: 20px;
+  font-weight: bold;
+}
+
+a:hover{
+  color: rgb(70, 137, 238);
+}
+
+header nav .right ul li:last-child{
+  padding-right: 50px;
+}
+
+@media only screen and (max-width: 900px){
+  header .desk{
+      display: none;
+  }
+   
+  header .mob{
+      display: block;
+      width: 100%;
+      height: 64px;        
+  }
+
+  header .mob ul{
+      display: flex;
+      flex-direction: row;
+      justify-content: space-evenly;
+      margin-top: 16px;
+      padding-left:  0px;
+  }
+
+}
+
+
 ::selection{
   background: #7ccdf3;
   color: #fff;
