--- a/resources/css/mobile/stylem.css
+++ b/resources/css/mobile/stylem.css
@@ -11,7 +11,11 @@
     header .desk{
         display: none;
     }
-     
+    
+    html{
+        font-family: 'Source Sans Pro', sans-serif;
+    }
+    
     header .mob{
         display: block;
         width: 100%;
@@ -26,4 +30,101 @@
         padding-left:  0px;
     }
 
+}
+
+@media only screen and (max-width: 900px){
+    .section1m{
+        display: flex;
+        flex-direction: column;
+        margin-top: 70px;
+        position: relative;
+        text-align: center;
+        margin-bottom: 30px;
+        background-color: rgb(212, 212, 212);
+    }
+
+    .section1m img{
+        background-size: cover;
+        max-width: 100%;
+    }
+
+    .section1m .text{
+        margin-top: 30px;
+        padding: 20px;
+    }
+
+    .textm h2{
+        font-size: 40px;
+        font-weight: 900;
+    }
+    
+    .textm h3{
+        font-size: 30px;
+        font-weight: bold;    
+    }
+    
+    .textm p{
+        font-size: 19px;
+        font-weight: 500;
+    }
+    
+    .maincontent .section1 .sign-up{  
+        position: absolute;
+        top: 80%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        
+    }
+
+    .sign-up{
+        margin-bottom: 30px;
+    }
+    
+    .sign-up .btn a{
+        text-decoration: none;
+        color: rgb(255, 255, 255) !important;
+        border: 1px solid rgb(255, 174, 23);
+        border-radius: 10px;
+        background-color: rgb(255, 174, 23);
+        padding: 10px 100px;
+        font-size: 30px;
+        
+    }
+    
+    .sign-up .btn:hover a{
+        background-color: rgb(255, 238, 238);
+        border: 1px solid white;
+        color: rgb(255, 174, 23) !important;
+    }
+}
+
+@media only screen and (max-width: 900px){
+    .section2m{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        text-align: center;
+        padding: 30px;
+        line-height: 2.0;
+    }
+
+    .section3m{
+        display: flex;
+        flex-direction: column;
+        background-color: rgb(212, 212, 212);
+        text-align: center;
+    }
+
+    .section3m img{
+        max-width: 100%;
+        background-size: cover;
+    }
+
+    .section3m .text1{
+        padding: 40px;
+    }
+
+    .section3m .text1 h4{
+        font-size: 30px;
+    }
 }
